<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Taxi Security</string>
    <string name="search_hint">Enter Destination</string>
    <string name="action_settings">Settings</string>
    <string name="time_allocator">Time Allocator</string>
    <string name="averse">Averse Destination</string>
    <string name="police_details">Police Station Details</string>
    <string name="help">Help</string>
    <string name="about">About Us</string>
    <string name="enter_your_destination_here">Enter your destination here</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="police_station_theory">Police Station Theory</string>
    <string name="choose">Police Station and Telephone Number(Click on it to see police area)</string>
    <string name="name">Name</string>
    <string name="phone">TP Number</string>
    <string name="Ignore">Ignore</string>
    <string name="SMS">Send SMS</string>
    <string name="Map">Show in Map</string>
    <string name="User_Details">User Details</string>
    <string name="User_Name">User Name</string>
    <string name="Password">Passward</string>
    <string name="ChosenContact1">Chosen Contact 1</string>
    <string name="Name1">Name</string>
    <string name="Mobile_No1">Mobile No</string>
    <string name="ChosenContact2">Chosen Contact 2</string>
    <string name="Name2">Name</string>
    <string name="Mobile_No2">Mobile No</string>
    <string name="Save1">Save</string>
    <string name="contact_1">Chosen Contact 1</string>  
    <string name="change_details">Change Contact Details</string> 
    <string name="name3">Name</string> 
    <string name="mobile_no3">Mobile No</string> 
    <string name="contact_2">Chosen Contact 2</string> 
    <string name="name4">Name</string> 
    <string name="mobile_no4">Mobile No</string> 
    <string name="Save2">Save</string>
    <string name="aboutdetail"><p>We are currently undergraduates at university of Colombo school of computing. As a team with six members we planned to build this application as a solution to the life threatening situations around today\s transpotation methods. Passengers who can assure about their security using this application inside the Colombo district. So we try to do our best as a aid to passengers through this application and this is also implementing forward.</p>\n\n<font size="24" ><b>Our Team</b></font>\n\n &#8226; J.I.B.Tennakoone - janitha000@gmail.com\n &#8226; Vindya Hettige - vindihh@gmail.com\n &#8226; Pasadhi Munasighe - pasadi.munasinghe@gmail.com\n &#8226; Y.S.Perera - ysperera@yahoo.com\n &#8226; Samith Ravishana - sravishana@gmail.com\n &#8226; Nadeeka Priyadharshani - nadeeka.ieee@gmail.com/n/n/n</string>
    <string name="shake_detector">Shake Detector</string>
    <string name="helpDes"><font size="24" ><b>Chosen Contacts </b></font>\n
        <p>Chosen Contact 1 and Chosen Contact 2 will be the contacts when in an emergency the SMS will be sent. 
            Emergency sms will be contained your last known location as a GPS location.</p>\n\n </string>
            
    <string name="helpDes2">
            <font size="24"><b>Time Allocator</b></font>\n
            <p>This function will automatically send the emergency SMS to your contacts if you did not respond in a specified time.
               This function is helpful when you are feel a threat about the vehicle you are traveling.\n\n </p>
               <b>How to use</b>\n\n
               &#8226; Select an appopriate time that you will think may need to your journey.\n
               &#8226; Touch the Start button. A notification will appear on the notification bar indicating that the service is running.\n
               &#8226; You may can deactivate the service at any time by touching the notification and giving the password.\n
               &#8226; Before the end of time (40 seconds before) the phone will vibrate and ask for your responce. You must respond by your password.\n
               &#8226; If you fail to respond the application will wait another 20 seconds for your response.\n
               &#8226; After that if no response from the user the application will automatically start sending your GPS location to your chosen contacts.\n\n
    </string>
    <string name = "helpDes3">    
            <font size="24"><b>Averse Destination</b></font>\n
            <p>This function can be used when you do not know the specific location about the destination.
This function will automatically alert you if the path of the cab service averse by the destination path.\n\n</p>
                 <b>How to use</b>\n\n
            &#8226; Select the destination you are travelling to from the drop down list.\n 
            &#8226; The averse destination service will start automatically and will be indicated on the notification bar..\n 
            &#8226; You may can deactivate the service at any time by touching the notification and giving the password.\n
            &#8226; If the destination is diverted a dialog will apear with choices to user.\n 
            &#8226; You can either ignore and continue, show in the map or send your location to the chosen contacts.\n\n
     </string>
     <string name="helpDes4">        
            <font size="24"><b>Police Station Details</b></font>\n
            
            <p>Details of the Colombo area police stations will be displayed with there contacts numbers in order to gat easily when in an emergency situation.\n\n</p>
            
            <font size="24"><b>Shake Detector</b></font>\n
            <p>Shake detector is a automatic emegency SMS sender when the user shakes the mobile device. This can be used 
                whenever the user wants to act quickly without accesing the mobile device s data.\n\n</p>
                 <b>How to use</b>\n\n
                 &#8226; Activate the service by touching on Shake Detector and giving option ON.\n
                 &#8226; A notification will be appeared on the notification bar indicating that the function is running.\n
                 &#8226; User can deactivate the function any time using the notification and the password.\n
                 &#8226; When ever the user feels a life threat user only needs to shake the mobile device and the emergency SMS will be sent using user s GPS location.\n\n
      </string>
      <string name="helpDes5">         
               <font size="24"><b>Emergency SMS</b></font>\n  
               <p>Emegerncy SMS will contain the user s current location obtained by GPS or mobile data. After starting this service
                   the Emergency SMS will be sent to both chosen contacts 5 mins apart for 2 hours. User can deactivate this service any time by
                   providing his password.\n</p>
                 
            
            
            </string>

    

</resources>
